--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/strings.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/strings.xml
@@ -3,11 +3,21 @@
     <string name="nameSistema">Sistema Gestional de Monitoreo Estudiantil</string>
     <string name="namePagina">www.SGMonitoreoEstudiantil</string>
 
-    <string name="error_invalid_email">Esta dirección de correo electrónico no es válida</string>
-    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
-    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
-    <string name="error_field_required">Este campo es requerido</string>
-    <string name="error_incorrect_dni">El dni debe tener 8 digitos</string>
-    <string name="error_incorrect_pass_conf">Las contraseñas no coinciden</string>
-    <string name="error_invalid_access">Acceso denegado temporalmente</string>
+
+
+    <string name="err_invalid_email">Esta dirección de correo electrónico no es válida</string>
+    <string name="err_invalid_password">Esta contraseña es demasiado corta</string>
+    <string name="err_incorrect_password">Esta contraseña es incorrecta</string>
+    <string name="err_field_required">Este campo es requerido</string>
+    <string name="err_incorrect_dni">El dni debe tener 8 digitos</string>
+    <string name="err_incorrect_pass_conf">Las contraseñas no coinciden</string>
+    <string name="err_invalid_access">Acceso denegado temporalmente</string>
+
+    <string name="hint_nombres_usuario">Nombres</string>
+    <string name="hint_apellido_usuario">Apellidos</string>
+    <string name="hint_email_usuario">E-mail</string>
+    <string name="hint_dni_alumno">Dni del Alumno</string>
+    <string name="hint_password_usuario">Password</string>
+    <string name="hint_pass_conf">Confirmar Password</string>
+    <string name="name_button_registrar">Registrar</string>
 </resources>
