--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/strings.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AppSGMonitoreoEstudiantil</string>
+    <string name="app_name">Sistema de Monitoreo Estudiantil</string>
     <string name="name_sistema">Sistema Gestional de Monitoreo Estudiantil</string>
     <string name="name_pagina">www.SGMonitoreoEstudiantil.com.pe</string>
 
