--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/strings.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Sistema de Monitoreo Estudiantil</string>
-    <string name="name_sistema">Sistema Gestional de Monitoreo Estudiantil</string>
+    <string name="name_sistema">Sistema de Monitoreo Estudiantil</string>
     <string name="name_pagina">www.SGMonitoreoEstudiantil.com.pe</string>
 
 
